deprecated API cleanup,  import optimization, low-hanging fruit for code modernizing