@@ -13,7 +13,6 @@ import de.mephisto.vpin.server.highscores.parsing.HighscoreParsingService;
 import de.mephisto.vpin.server.players.Player;
 import de.mephisto.vpin.server.players.PlayerService;
 import org.jspecify.annotations.NonNull;
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -22,8 +21,9 @@ import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskScheduler;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
-
+import java.time.Duration;
 import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -228,8 +228,8 @@ public class CompetitionService implements InitializingBean {
             activeCompetition.setWinnerInitials("???");
           }
           else {
-            Score score = competitionScore.getScores().get(0);
-            String initials = !StringUtils.isEmpty(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
+            Score score = competitionScore.getScores().getFirst();
+            String initials = StringUtils.hasText(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
             activeCompetition.setWinnerInitials(initials);
           }
           competitionsRepository.saveAndFlush(activeCompetition);
@@ -253,8 +253,8 @@ public class CompetitionService implements InitializingBean {
       competition.setWinnerInitials("???");
     }
     else {
-      Score score = competitionScore.getScores().get(0);
-      String initials = !StringUtils.isEmpty(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
+      Score score = competitionScore.getScores().getFirst();
+      String initials = StringUtils.hasText(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
       competition.setWinnerInitials(initials);
     }
     competition.setScore(competitionScore.getRaw()); //save the last raw score to the competition itself
@@ -295,7 +295,7 @@ public class CompetitionService implements InitializingBean {
   public Competition getActiveCompetition(CompetitionType competitionType) {
       List<Competition> result = competitionsRepository.findByAndWinnerInitialsIsNullAndStartDateLessThanEqualAndEndDateGreaterThanEqualAndType(OffsetDateTime.now(), OffsetDateTime.now(), competitionType.name());
     if (!result.isEmpty()) {
-      return result.get(0);
+      return result.getFirst();
     }
     return null;
   }
@@ -360,7 +360,7 @@ public class CompetitionService implements InitializingBean {
 
   @EventListener(ApplicationReadyEvent.class)
   public void scheduleCompetitionCheck() {
-    scheduler.scheduleAtFixedRate(new CompetitionCheckRunnable(this), 1000 * 60 * 2);
+      scheduler.scheduleAtFixedRate(new CompetitionCheckRunnable(this), Duration.ofMinutes(2));
   }
 
   public void shutdown() {
