@@ -20,9 +20,9 @@ import de.mephisto.vpin.server.highscores.HighscoreService;
 import de.mephisto.vpin.server.preferences.PreferenceChangedListener;
 import de.mephisto.vpin.server.preferences.PreferencesService;
 import de.mephisto.vpin.server.vpx.VPXUtil;
+import org.apache.commons.lang3.StringUtils;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -31,7 +31,6 @@ import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.ApplicationListener;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -97,7 +96,7 @@ public class WOVPCompetitionSynchronizer implements InitializingBean, Applicatio
   }
 
   private void runCompetitionCleanupCheck(Challenges challenges, List<Competition> weeklyCompetitions) {
-    List<String> challengesIds = challenges.getItems().stream().map(c -> c.getId()).collect(Collectors.toList());
+    List<String> challengesIds = challenges.getItems().stream().map(c -> c.getId()).toList();
     for (Competition weeklyCompetition : weeklyCompetitions) {
       String uuid = weeklyCompetition.getUuid();
       if (!challengesIds.contains(uuid)) {
@@ -196,7 +195,7 @@ public class WOVPCompetitionSynchronizer implements InitializingBean, Applicatio
         LOG.info("Found matching wovp game for {}: {} / {} / {}", challenge.getName(), gameMatch.getGameDisplayName(), gameMatch.getExtTableId(), gameMatch.getExtTableVersionId());
       }
 
-      Game game = gameMatches.get(0);
+      Game game = gameMatches.getFirst();
       List<String> scriptMatchKeywords = challenge.getScriptMatchKeywords();
       if (validateGameScript(game, scriptMatchKeywords)) {
         LOG.info("WOVP game validation successful, found phrase \"{}\" in VPX file {}", scriptMatchKeywords, game.getGameFileName());
