@@ -19,14 +19,15 @@ import de.mephisto.vpin.server.games.Game;
 import de.mephisto.vpin.server.games.GameEmulator;
 import de.mephisto.vpin.server.system.JCodec;
 import de.mephisto.vpin.server.system.SystemService;
-import org.jspecify.annotations.NonNull;
-import org.jspecify.annotations.Nullable;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOCase;
 import org.apache.commons.io.filefilter.DirectoryFileFilter;
 import org.apache.commons.io.filefilter.IOFileFilter;
 import org.apache.commons.io.filefilter.SuffixFileFilter;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -40,8 +41,8 @@ import java.awt.image.BufferedImage;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Stream;
 
@@ -490,7 +491,7 @@ public class BackglassService implements InitializingBean {
     for (GameEmulator emu : emulatorService.getVpxGameEmulators()) {
       // check in installation
       try (Stream<Path> walkStream = Files.walk(emu.getInstallationFolder().toPath())) {
-        Optional<Path> found = walkStream.filter(p -> StringUtils.equalsIgnoreCase(p.getFileName().toString(), "B2SBackglassServer.dll")).findFirst();
+        Optional<Path> found = walkStream.filter(p -> Strings.CI.equals(p.getFileName().toString(), "B2SBackglassServer.dll")).findFirst();
         if (found.isPresent()) {
           return found.get().toFile().getParentFile();
         }
@@ -730,7 +731,7 @@ public class BackglassService implements InitializingBean {
       b2s.clearVersions();
       for (String version : versions) {
         // rename the file
-        String newVersion = StringUtils.replaceIgnoreCase(version, baseName, newBaseName);
+        String newVersion = Strings.CI.replace(version, baseName, newBaseName);
         File b2sFile = new File(emulator.getGamesDirectory(), version);
         File b2sNewFile = new File(emulator.getGamesDirectory(), newVersion);
         if (b2sFile.exists() && b2sFile.renameTo(b2sNewFile)) {
@@ -879,13 +880,13 @@ public class BackglassService implements InitializingBean {
       return null;
     }
     DirectB2sScreenRes res = new DirectB2sScreenRes();
-    res.setScreenresFilePath(lines.remove(0));
-    res.setGlobal(b2sFile == null || StringUtils.containsIgnoreCase(res.getScreenresFilePath(), b2sFile.getName()));
+    res.setScreenresFilePath(lines.removeFirst());
+    res.setGlobal(b2sFile == null || Strings.CI.contains(res.getScreenresFilePath(), b2sFile.getName()));
 
-    res.setVersion(lines.remove(0));
+    res.setVersion(lines.removeFirst());
 
     // cf https://github.com/vpinball/b2s-backglass/blob/7842b3638b62741e21ebb511e2a886fa2091a40f/b2s_screenresidentifier/b2s_screenresidentifier/module.vb#L105
-    res.setPlayfieldWidth(parseIntSafe(lines.get(0)));
+    res.setPlayfieldWidth(parseIntSafe(lines.getFirst()));
     res.setPlayfieldHeight(parseIntSafe(lines.get(1)));
 
     res.setBackglassWidth(parseIntSafe(lines.get(2)));
@@ -976,7 +977,7 @@ public class BackglassService implements InitializingBean {
         LOG.info("Failed to read Screenres.txt via standard patterns, trying first VPX emulator instead.");
         List<GameEmulator> vpxGameEmulators = emulatorService.getVpxGameEmulators();
         if (!vpxGameEmulators.isEmpty()) {
-          GameEmulator emulator = vpxGameEmulators.get(0);
+          GameEmulator emulator = vpxGameEmulators.getFirst();
           target = new File(emulator.getGamesDirectory(), "ScreenRes.txt");
         }
 
@@ -1011,8 +1012,8 @@ public class BackglassService implements InitializingBean {
         version = "# V1";
       }
       // insert additional information
-      lines.add(0, version);
-      lines.add(0, target.getAbsolutePath());
+      lines.addFirst(version);
+      lines.addFirst(target.getAbsolutePath());
       return lines;
     }
     catch (Exception e) {
@@ -1088,17 +1089,17 @@ public class BackglassService implements InitializingBean {
     if (lines == null) {
       throw new IOException("Cannot find an existing table nor table .res");
     }
-    String templateName = lines.remove(0);
+    String templateName = lines.removeFirst();
 
     // if already a table file exists, replace it
-    File screenresFile = StringUtils.containsIgnoreCase(templateName, FilenameUtils.getBaseName(screenres.getB2SFileName())) ?
-        new File(templateName) : new File(emulator.getGamesDirectory(), StringUtils.replaceIgnoreCase(screenres.getB2SFileName(), ".directb2s", ".res"));
+    File screenresFile = Strings.CI.contains(templateName, FilenameUtils.getBaseName(screenres.getB2SFileName())) ?
+        new File(templateName) : new File(emulator.getGamesDirectory(), Strings.CI.replace(screenres.getB2SFileName(), ".directb2s", ".res"));
 
     if (!screenresFile.exists() || screenresFile.delete()) {
       try (BufferedWriter writer = new BufferedWriter(new FileWriter(screenresFile))) {
 
         // check version number in case it is not in the original file
-        String version = lines.remove(0);
+        String version = lines.removeFirst();
         if (!version.replace(" ", "").startsWith("#V2")) {
           // fetch the b2s version from the file itself
           File b2sServerExe = new File(getBackglassServerFolder(), "B2SBackglassServerEXE.exe");
