@@ -20,6 +20,7 @@ import org.apache.catalina.connector.ClientAbortException;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -173,7 +174,7 @@ public class GameMediaResource {
     if (rangeHeader != null) {
       List<HttpRange> ranges = HttpRange.parseRanges(rangeHeader);
       if (ranges.size() == 1) {
-        HttpRange range = ranges.get(0);
+        HttpRange range = ranges.getFirst();
         start = range.getRangeStart(contentLength);
         end = range.getRangeEnd(contentLength);
 
@@ -269,7 +270,7 @@ public class GameMediaResource {
     final boolean getPreview;
     long contentLength = -1;
     String mimeType = frontendMediaItem.getMimeType();
-    if (preview && StringUtils.startsWithIgnoreCase(mimeType, "video/")) {
+    if (preview && Strings.CI.startsWith(mimeType, "video/")) {
       // will return only a frame, content length cannot be calculated
       mimeType = "image/png";
       getPreview = true;
@@ -291,7 +292,7 @@ public class GameMediaResource {
     if (rangeHeader != null) {
       List<HttpRange> ranges = HttpRange.parseRanges(rangeHeader);
       if (ranges.size() == 1) {
-        HttpRange range = ranges.get(0);
+        HttpRange range = ranges.getFirst();
         start = range.getRangeStart(contentLength);
         end = range.getRangeEnd(contentLength);
 
