@@ -24,9 +24,9 @@ import de.mephisto.vpin.server.preferences.PreferenceChangedListener;
 import de.mephisto.vpin.server.preferences.PreferencesService;
 import de.mephisto.vpin.server.recorder.ScreenshotService;
 import de.mephisto.vpin.server.system.SystemService;
+import org.apache.commons.lang3.StringUtils;
 import org.jspecify.annotations.NonNull;
 import org.jspecify.annotations.Nullable;
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -34,7 +34,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -137,7 +139,7 @@ public class WovpService implements InitializingBean, PreferenceChangedListener,
     }
 
     Optional<Challenge> challenge = challenges.getItems().stream().filter(c -> c.getId().equals(competition.get().getUuid())).findFirst();
-    if (!challenge.isPresent()) {
+    if (challenge.isEmpty()) {
       SLOG.info("[WOVP simulate=" + simulate + "] " + "Challenge synchronization failed.");
       result.setErrorMessage("Challenge synchronization failed.");
       return result;
@@ -235,7 +237,7 @@ public class WovpService implements InitializingBean, PreferenceChangedListener,
     wovpSettings = preferencesService.getJsonPreference(PreferenceNames.WOVP_SETTINGS, WOVPSettings.class);
     List<WovpPlayer> players = Wovp.getPlayers();
     if (!players.isEmpty()) {
-      ScoreSubmitResult scoreSubmitResult = submitScore(players.get(0), true);
+      ScoreSubmitResult scoreSubmitResult = submitScore(players.getFirst(), true);
       return scoreSubmitResult.getErrorMessage() == null;
     }
     return false;
