@@ -1,6 +1,7 @@
 package de.mephisto.vpin.ui.tables.alx;
 
 import de.mephisto.vpin.commons.fx.Debouncer;
+import de.mephisto.vpin.commons.utils.JFXFuture;
 import de.mephisto.vpin.commons.utils.WidgetFactory;
 import de.mephisto.vpin.restclient.PreferenceNames;
 import de.mephisto.vpin.restclient.alx.AlxSummary;
@@ -13,8 +14,6 @@ import de.mephisto.vpin.ui.*;
 import de.mephisto.vpin.ui.events.EventManager;
 import de.mephisto.vpin.ui.events.StudioEventListener;
 import de.mephisto.vpin.ui.tables.TablesController;
-import de.mephisto.vpin.commons.utils.JFXFuture;
-import org.jspecify.annotations.Nullable;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
@@ -27,13 +26,16 @@ import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import org.apache.commons.collections4.ListUtils;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.lang.invoke.MethodHandles;
 import java.net.URL;
 import java.time.OffsetDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
 import static de.mephisto.vpin.ui.Studio.client;
@@ -113,7 +115,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
     GameEmulatorRepresentation allTables = new GameEmulatorRepresentation();
     allTables.setId(-1);
     allTables.setName("All Tables");
-    filtered.add(0, allTables);
+    filtered.addFirst(allTables);
 
     // mind settings combo will also trigger refreshAlxData()
     this.emulatorCombo.setItems(FXCollections.observableList(filtered));
@@ -134,7 +136,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
     this.emulatorCombo.valueProperty().addListener((observable, oldValue, newValue) -> refreshAlxData());
 
     client.getPreferenceService().addListener(this);
-    NavigationController.setBreadCrumb(Arrays.asList("Analytics"));
+    NavigationController.setBreadCrumb(List.of("Analytics"));
 
     Studio.stage.widthProperty().addListener(new ChangeListener<Number>() {
       @Override
@@ -245,7 +247,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
 
   @Override
   public void onViewActivated(NavigationOptions options) {
-    NavigationController.setBreadCrumb(Arrays.asList("Table Statistics"));
+    NavigationController.setBreadCrumb(List.of("Table Statistics"));
     refreshEmulators();
     // OLE don't call as refreshEmulators() selects the first emulator item, that triggers a refresh of alx data 
     //refreshAlxData();
